<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.setupGame.playersCountChooser.PlayersCountChooserFragment">

    <data>

        <variable
            name="viewModel"
            type="com.safi.dicegame.ui.setupGame.playersCountChooser.PlayersCountChooserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_body_padding">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_count_chooser_screen_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/players_count_chooser_screen_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={viewModel.numberOfPlayers}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <Button
            android:id="@+id/ctaNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isNextButtonEnabled}"
            android:onClick="@{() -> viewModel.onNextClicked()}"
            android:text="@string/players_count_chooser_screen_cta"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>